--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-16  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvasitem.c: changed docs referring to "root_x" and "root_y" 
+	fields of event structs to "x_root" and "y_root".
+
 2009-03-15  Damon Chaplin  <damon@gnome.org>
 
 	* Released GooCanvas 0.14
