--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 
+  NOTE: The 1.0.9x versions are unstable development releases and should only
+        be used for development and testing. The API may change before 2.0.
+
 
 			   Welcome to GooCanvas
                            ====================
