--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-28  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvasitemsimple.c (goo_canvas_item_simple_set_property): 
+	handle setting "clip-path" to NULL to reset it.
+
 2010-06-24  Damon Chaplin  <damon@gnome.org>
 
 	* Added "line-width-is-unscaled" property to GooCanvasItemSimple
