2010-06-28  Damon Chaplin  <damon@gnome.org>
	    * docs/goocanvas-sections.txt:
	    * src/goocanvasitemsimple.c:
	    * src/goocanvasitemsimple.h: update docs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2010-06-28  Damon Chaplin  <damon@gnome.org>
 
+	* docs/goocanvas-sections.txt:
+	* src/goocanvasitemsimple.c:
+	* src/goocanvasitemsimple.h: update docs.
+
+2010-06-28  Damon Chaplin  <damon@gnome.org>
+
 	* Made GooCanvasItemSimple implement the group methods, so all
 	subclasses can have child items.
 
