2010-06-30  Damon Chaplin  <damon@gnome.org>
	    * docs: removed model-view-canvas.xml and added empty internal subset
	    "[]" to the DOCTYPEs to keep gtk-doc happy.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-30  Damon Chaplin  <damon@gnome.org>
+
+	* docs: removed model-view-canvas.xml and added empty internal subset
+	"[]" to the DOCTYPEs to keep gtk-doc happy.
+
 2010-06-29  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvasitemsimple.c (goo_canvas_item_simple_update)
