--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-06-30  Damon Chaplin  <damon@gnome.org>
 
+	* demo/scalability-demo.c: fixed the USE_PIXMAP test.
+
+2010-06-30  Damon Chaplin  <damon@gnome.org>
+
 	* src/goocanvasitemsimple.c (goo_canvas_item_simple_set_property): if
 	a shared style is being used, make a copy of it before setting the
 	property.
