--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,29 @@
+2010-06-30  Damon Chaplin  <damon@gnome.org>
+
+	* docs: added empty internal subset "[]" to the DOCTYPEs to keep
+	gtk-doc happy.
+
+	* src/goocanvas.c (goo_canvas_expose_event): do a cairo_save()/restore()
+	around painting the main items, so the static items don't get clipped.
+
+	* src/goocanvasitemsimple.c (goo_canvas_item_simple_set_property):
+	handle setting "clip-path" to NULL to reset it.
+
+	* src/goocanvastable.c: try to handle RTL direction better.
+
+	* src/goocanvasgroup.c (goo_canvas_group_paint): use the scale
+	argument rather than the canvas scale.
+
+	* src/goocanvas.c: added "before-initial-expose" flag which we use
+	to ignore any redraw requests before the initial expose (since we
+	know the entire canvas needs redrawing anyway). This speeds up the
+	creation of lots of items, e.g. scalability-demo.
+
+	* demo/Makefile.am (mv_demo_LDADD, demo_LDADD): added -lm to compile.
+
+	* demo/mv-scalability-demo.c:
+	* demo/scalability-demo.c: updated to compare with the new-api code.
+
 2010-06-21  Damon Chaplin  <damon@gnome.org>
 
 	* Released GooCanvas 1.90.0
@@ -19,7 +45,7 @@
 	Replace use of gtk_fixed_set_has_window() with gtk_widget_set_has_window().
 	Replace use of GTK_WIDGET_CAN_FOCUS() with gtk_widget_get_can_focus().
 	Replace use of GTK_WIDGET_TOPLEVEL() with gtk_widget_is_toplevel().
-	
+
 	This seems to all work fine.
 
 2010-06-11  Murray Cumming  <murrayc@murrayc.com>
