--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-07-09  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvasitemsimple.c (goo_canvas_item_simple_set_stroke_options):
+	keep a single black pattern rather than recreating one when needed.
+
 2010-07-08  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvas.c (goo_canvas_check_font_size): new function to
