--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-07-10  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvasitemsimple.c:
+	* src/goocanvas.c:
+	* src/goocanvasstyle.c: use a GooCanvasStyleValuesMask "mask" to specify
+	which style properties have been set.
+
 2010-07-09  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvas.c (goo_canvas_set_default_style): new function to set
