2010-10-24  Damon Chaplin  <damon@gnome.org>
	    * src/goocanvas.c: updated the drawing code to work with GTK+ 3.
	    It seems to work now, but it still flickers when zooming in & out,
	    since we can't use our old trick of mapping a temporary window with
	    no background over it while changing the scale.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-10-24  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvas.c: updated the drawing code to work with GTK+ 3.
+	It seems to work now, but it still flickers when zooming in & out,
+	since we can't use our old trick of mapping a temporary window with
+	no background over it while changing the scale.
+
 2010-10-01  Damon Chaplin  <damon@gnome.org>
 
 	* demo/*.c
